--- a/MyCity4Kids/MyCity4Kids/res/layout/contact_details_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/contact_details_layout.xml
@@ -166,6 +166,7 @@
             android:background="@drawable/mainprofile_thin_border"
             android:gravity="center_vertical"
             android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
             android:paddingTop="10dp"
             android:textColor="@color/app_light_black"
             android:textSize="14sp"
