--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_listing_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_listing_activity.xml
@@ -42,8 +42,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:gravity="center"
-        android:nestedScrollingEnabled="false"
-
+        android:horizontalSpacing="15dp"
+        android:numColumns="2"
         android:stretchMode="columnWidth"
         android:verticalSpacing="15dp"
         android:visibility="visible" />
