--- a/MyCity4Kids/MyCity4Kids/res/menu/menu_bottom_navigation_bar.xml
+++ b/MyCity4Kids/MyCity4Kids/res/menu/menu_bottom_navigation_bar.xml
@@ -7,17 +7,17 @@
     <item
         android:id="@+id/action_profile"
         android:icon="@drawable/selector_profile_tab"
-        android:title="@string/discover" />
+        android:title="@string/navigation_bar.discover" />
     <item
         android:id="@+id/action_write"
         android:icon="@drawable/selector_write_blog_tab"
-        android:title="@string/create" />
+        android:title="@string/navigation_bar.create" />
     <item
         android:id="@+id/action_notification"
         android:icon="@drawable/selector_notification_tab"
-        android:title="@string/home_screen.notification.title" />
+        android:title="@string/navigation_bar.notifications" />
     <item
         android:id="@+id/action_location"
         android:icon="@drawable/selector_events_tab"
-        android:title="@string/groups.groups" />
+        android:title="@string/navigation_bar.groups" />
 </menu>
