--- a/MyCity4Kids/MyCity4Kids/res/drawable/circular_image_bg.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/circular_image_bg.xml
@@ -6,7 +6,7 @@
         android:right="1dp"
         android:top="1dp">
         <shape android:shape="oval">
-            <solid android:color="@color/groups.blue_color" />
+            <solid android:color="@color/app_red" />
         </shape>
     </item>
 </layer-list>
