--- a/MyCity4Kids/MyCity4Kids/res/drawable/follow_topic_author_bg.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/follow_topic_author_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="@color/app_red" />
+        android:color="@color/app_trans_red" />
 
     <solid android:color="@color/white_color" />
 
@@ -10,5 +10,7 @@
         android:left="1dp"
         android:right="1dp"
         android:top="1dp" />
+
+    <corners android:radius="2dp" />
 
 </shape>
