--- a/MyCity4Kids/MyCity4Kids/res/drawable/navigation_create_button.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/navigation_create_button.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/red_drawer_selected" />
+            <solid android:color="@color/app_red" />
         </shape>
     </item>
     <item
