--- a/MyCity4Kids/MyCity4Kids/res/drawable/selector_events_tab.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/selector_events_tab.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/tab4_selected" android:state_checked="true" />
-    <item android:drawable="@drawable/tab4_selected" android:state_pressed="true" />
-    <item android:drawable="@drawable/tab4" />
+    <item android:drawable="@drawable/ic_bottom_group_selected" android:state_checked="true" />
+    <item android:drawable="@drawable/ic_bottom_group_selected" android:state_pressed="true" />
+    <item android:drawable="@drawable/ic_bottom_group" />
 </selector>
