--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_dashboard.xml
@@ -33,7 +33,8 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/bookmark_icon_round_bg"
                     android:padding="10dp"
-                    android:src="@drawable/ic_bookmark" />
+                    android:src="@drawable/ic_bookmark"
+                    android:tint="@color/app_red" />
 
                 <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/messageTextView"
@@ -145,8 +146,8 @@
 
                         <ImageView
                             android:id="@+id/searchAllImageView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
                             android:layout_gravity="center"
                             android:paddingBottom="10dp"
                             android:paddingLeft="10dp"
