--- a/MyCity4Kids/MyCity4Kids/res/layout/add_article_topics_activity_new.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_article_topics_activity_new.xml
@@ -66,7 +66,7 @@
         android:elevation="3dp"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:tabIndicatorColor="@color/home.trending.tabbar_indicator"
+        app:tabIndicatorColor="@color/app_red"
         app:tabIndicatorHeight="3dp"
         app:tabMode="scrollable"
         app:tabSelectedTextColor="@color/home.trending.tabbar_text"
@@ -113,7 +113,7 @@
             android:layout_alignParentRight="true"
             android:padding="20dp"
             android:text="@string/add_article_topics.apply"
-            android:textColor="@color/add_article_topics.apply"
+            android:textColor="@color/app_red"
             app:fontName="oswald_regular.ttf" />
     </RelativeLayout>
 
