--- a/MyCity4Kids/MyCity4Kids/res/layout/article_image_tag_publish.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_image_tag_publish.xml
@@ -172,7 +172,7 @@
         android:gravity="center"
         android:padding="15dp"
         android:text="@string/choose_article_image.publish"
-        android:textColor="@color/choose_article_image.publish"
+        android:textColor="@color/app_red"
         android:textSize="17sp"
         app:fontName="oswald_regular.ttf" />
 
