--- a/MyCity4Kids/MyCity4Kids/res/layout/private_profile_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/private_profile_activity.xml
@@ -14,7 +14,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/dark_transparent"
-            android:clickable="true"
             android:elevation="8dp"
             android:minHeight="1000dp"
             android:visibility="invisible">
@@ -101,97 +100,6 @@
 
         </RelativeLayout>
 
-        <RelativeLayout
-            android:id="@+id/publishCoachmark"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/dark_transparent"
-            android:clickable="true"
-            android:elevation="8dp"
-            android:minHeight="1000dp"
-            android:visibility="invisible">
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbarMenu1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="?attr/actionBarSize"
-                app:theme="@style/ToolbarTheme"
-                app:titleTextAppearance="@style/ToolbarTheme.Title">
-
-                <RelativeLayout
-                    android:id="@+id/toolbarRelativeLayoutMenu1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:visibility="visible">
-
-                    <com.mycity4kids.widget.CustomFontTextView
-                        android:id="@+id/editProfileTextView2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_toLeftOf="@+id/editProfileImageView2"
-                        android:paddingBottom="10dp"
-                        android:paddingTop="10dp"
-                        android:text="@string/app_settings.tabbar.edit_profile"
-                        android:textColor="@color/white"
-                        android:textSize="18sp"
-                        app:fontName="oswald_regular.ttf" />
-
-                    <ImageView
-                        android:id="@+id/editProfileImageView2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        android:paddingBottom="15dp"
-                        android:paddingLeft="10dp"
-                        android:paddingRight="10dp"
-                        android:paddingTop="15dp"
-                        android:src="@drawable/ic_red_edit"
-                        android:tint="@color/red_drawer_selected"
-                        android:visibility="visible" />
-
-                </RelativeLayout>
-
-            </android.support.v7.widget.Toolbar>
-
-            <View
-                android:id="@+id/menuHorizontalLine1"
-                android:layout_width="120dp"
-                android:layout_height="2dp"
-                android:layout_alignParentRight="true"
-                android:layout_below="@+id/toolbarMenu1"
-                android:layout_marginRight="16dp"
-                android:background="@color/white" />
-
-            <View
-                android:id="@+id/menuVerticalLine1"
-                android:layout_width="2dp"
-                android:layout_height="30dp"
-                android:layout_alignParentRight="true"
-                android:layout_below="@id/menuHorizontalLine1"
-                android:layout_marginRight="70dp"
-                android:background="@color/white" />
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/menuGuideTextView1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/menuVerticalLine1"
-                android:layout_centerHorizontal="true"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:background="@color/white"
-                android:paddingBottom="7dp"
-                android:paddingLeft="9dp"
-                android:paddingRight="9dp"
-                android:paddingTop="7dp"
-                android:text="@string/coachmark.create"
-                android:textColor="@color/black"
-                app:fontName="oswald.ttf" />
-
-        </RelativeLayout>
         <RelativeLayout
             android:id="@+id/layout_drawer"
             android:layout_width="match_parent"
@@ -351,15 +259,16 @@
                 android:id="@+id/progress_bar_1"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="6dp"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/profileCompletionLabel"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_toLeftOf="@+id/profilePercentageTextView"
                 android:indeterminate="false"
-                android:maxHeight="12dp"
-                android:minHeight="12dp"
+                android:maxHeight="6dp"
+                android:minHeight="6dp"
                 android:progress="0"
                 app:backgroundColor="@color/profile_progress"
                 app:progressColor="@color/app_red" />
@@ -518,6 +427,79 @@
                 android:paddingLeft="10dp"
                 android:text="@string/user_article.tabbar.published_label"
                 app:fontName="oswald.ttf" />
+
+            <LinearLayout
+                android:id="@+id/publishCoachmark1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/publishedSectionTextView"
+                android:layout_alignParentTop="true"
+                android:background="@color/dark_transparent"
+                android:elevation="18dp"
+                android:orientation="vertical"
+                android:visibility="invisible">
+
+            </LinearLayout>
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/publishedSectionTextView1"
+                android:layout_width="match_parent"
+                android:layout_height="42dp"
+                android:layout_below="@+id/statsCountContainer"
+                android:background="@color/dark_transparent"
+                android:drawableLeft="@drawable/ic_article"
+                android:drawablePadding="20dp"
+                android:gravity="center_vertical"
+                android:paddingLeft="10dp"
+                android:text="@string/user_article.tabbar.published_label"
+                android:textColor="@color/white"
+                android:visibility="invisible"
+                app:fontName="oswald.ttf" />
+
+            <LinearLayout
+                android:id="@+id/publishCoachmark2"
+                android:layout_width="match_parent"
+                android:layout_height="500dp"
+                android:layout_below="@+id/publishedSectionTextView"
+                android:background="@color/dark_transparent"
+                android:elevation="18dp"
+                android:orientation="vertical"
+                android:visibility="invisible">
+
+                <View
+                    android:id="@+id/menuHorizontalLine1"
+                    android:layout_width="80dp"
+                    android:layout_height="2dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_below="@+id/toolbarMenu"
+                    android:layout_marginLeft="40dp"
+                    android:background="@color/white" />
+
+                <View
+                    android:id="@+id/menuVerticalLine1"
+                    android:layout_width="2dp"
+                    android:layout_height="30dp"
+                    android:layout_below="@id/menuHorizontalLine1"
+                    android:layout_marginLeft="70dp"
+                    android:background="@color/white" />
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/menuGuideTextView1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@color/white"
+                    android:paddingBottom="7dp"
+                    android:paddingLeft="9dp"
+                    android:paddingRight="9dp"
+                    android:paddingTop="7dp"
+                    android:text="@string/coachmark.publish"
+                    android:textColor="@color/black"
+                    app:fontName="oswald.ttf" />
+
+            </LinearLayout>
+
 
             <View
                 android:id="@+id/underline_1"
