--- a/MyCity4Kids/MyCity4Kids/res/layout/profile_about_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/profile_about_layout.xml
@@ -11,7 +11,7 @@
         android:id="@+id/main_profile_About_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#F5F5F6"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <com.mycity4kids.widget.CustomFontTextView
